HTML v1 + éléments maquette

--- a/reservia.html
+++ b/reservia.html
@@ -1,8 +1,57 @@
 <!DOCTYPE html> 
 <html>
+    <!--HEAD-->
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="style.css"/>
         <title>Reservia</title>
     </head>
+
+    <!--BODY-->
+    <body>
+        <!--HEADER-->
+        <header>
+            <nav>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!--Section h1-->
+        <section>
+            <div>
+                <h1></h1>
+                <p></p>
+            </div>
+            <!--Div avec séléction paramètres/filtres-->
+            <div></div>
+            <div></div>
+            <p></p>
+        </section>
+
+        <!-- Section Hébergement-->
+        <section>
+            <!-- Div hebergement à Marseille-->
+            <div></div>
+            <!--Div les plus populaires-->
+            <div></div>
+        </section>
+
+        <!--Section h2-->
+        <section>
+            <h2></h2>
+            <!--Div Activités à Marseille-->
+            <div></div>
+        </section>
+
+        <!--Footer-->
+        <footer>
+            <!--Div Tableau + h3-->
+            <Div></Div>
+        </footer>
+
+    </body>
 </html>
