nomination sections, div, id, class + Commentaires

--- a/reservia.html
+++ b/reservia.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html> 
 <html>
-    <!--HEAD-->
+<!--HEAD-->
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="style.css"/>
         <title>Reservia</title>
+        <meta name="description" content="Reservia - Trouvez votre hébergement pour des vacances de rêve"/>
     </head>
 
-    <!--BODY-->
+<!--BODY-->
     <body>
-        <!--HEADER-->
-        <header>
-            <nav>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+<!--HEADER-->
+        <header id="menu" class="section">
+            <nav id="nav_menu">
+                <ul id="ul_menu">
+                    <li>Hébergements</li>
+                    <li>Activités</li>
+                    <li>S'inscrire</li>
                 </ul>
             </nav>
         </header>
 
-        <!--Section h1-->
-        <section>
-            <div>
-                <h1></h1>
-                <p></p>
+        <div id="bloc_page">
+<!--Section h1-->
+        <section id="section_h1" class="section">
+            <div id="bloc_h1" class= "class_h1">
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1><br />
+                <p>En plein centre ville ou en pleine nature</p>
             </div>
-            <!--Div avec séléction paramètres/filtres-->
-            <div></div>
-            <div></div>
-            <p></p>
+<!--Div avec séléction paramètres/filtres-->
+            <div id="ville" class= "class_h1"> <!--CHOIX VILLES--> </div>
+            <div id="filtres" class= "class_h1"> <!--CHOIX FILTRES--> </div>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
 
-        <!-- Section Hébergement-->
-        <section>
-            <!-- Div hebergement à Marseille-->
-            <div></div>
-            <!--Div les plus populaires-->
-            <div></div>
+<!-- Section Hébergement-->
+        <section id="section_hebergement" class="section">
+<!-- Div hebergement à Marseille-->
+            <div id="hebergement_marseille" class="class_hebergement" div> <!--CHOIX HEBERGEMENTS MARSEILLE--> </div>
+<!-- Div les plus populaires-->
+            <div id="populaires" class="class_hebergement"> <!--CHOIX POPULAIRES--> </div>
         </section>
 
-        <!--Section h2-->
-        <section>
-            <h2></h2>
-            <!--Div Activités à Marseille-->
-            <div></div>
+<!--Section h2-->
+        <section id="section_h2" class="section">
+            <h2>Activités à Marseille</h2><br />
+<!--Div Activités à Marseille-->
+            <div id="act_marseille" class="class_act"> <!--CHOIX ACTIVITES MARSEILLE--> </div>
         </section>
 
-        <!--Footer-->
-        <footer>
-            <!--Div Tableau + h3-->
-            <Div></Div>
+<!--FOOTER-->
+        <footer id="footer" class="section">
+<!--Div Tableau -->
+        <div id="tableau_footer"> <!--TABLEAU "A propos", "Nos hébergements", "Assistance"--> </div>
         </footer>
 
+        </div>
     </body>
 </html>
