css icon, header, nav, h1, ville+filtres+info

--- a/reservia.html
+++ b/reservia.html
@@ -45,8 +45,8 @@
             <!--SECTION 1 - Séléction Villes/Filtres-->
             <section id="section_h1" class="section">
                 <div id="bloc_h1">
-                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <p>En plein centre ville ou en pleine nature</p>
+                    <h1 class="h1_titre">Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <span class="h1_sous-titre"><p>En plein centre ville ou en pleine nature</p></span>
                 </div>
 
                 <!--Choix Villes--> 
@@ -60,50 +60,47 @@
                         <input type="submit" name="recherche_ville" id="recherche_ville" value="Rechercher"/>
                 </div>
 
+
+
                 <!--Choix Filtres-->
-                <div id="filtres">
-                    <h4>Filtres</h4>
 
-                    <!--Div Eco-->
-                    <div class="div_filtres">
-                        <label for="economique">
-                        <span class="span_icon_filtres"><i class="fas fa-money-bill-wave icon iconbleu"></i></span>
-                        <a href="#" id="economique" class="liens_filtres">Économique</a>
-                        </label>
-                    </div>
+                <section id="filtres">
+                    <h4 class="h4_filtres">Filtres</h4>
 
-                    <!--Div famille-->
                     <div class="div_filtres">
-                        <label for="familial">
-                        <span class="span_icon_filtres"><i class="fas fa-child icon iconbleu"></i></span>
-                        <a href="#" id="familial" class="liens_filtres">Familial</a>
-                        </label>
-                    </div>
 
-                    <!--Div Coeur-->
-                    <div class="div_filtres">
-                        <label for="romantique">
-                        <span class="span_icon_filtres"><i class="fas fa-heart icon iconbleu"></i></span>
-                        <a href="#" id="romantique" class="liens_filtres">Romantique</a>
-                        </label>
-                    </div>
+                    <!--Eco-->
+                        <a href="#" id="economique" class="liens_filtres">Économique
+                            <span class="span_icon_filtres"><i class="fas fa-money-bill-wave iconbleu"></i></span>
+                        </a>
 
-                    <!--Div Chien-->    
-                    <div class="div_filtres">
-                        <label for="animaux">
-                        <span class="span_icon_filtres"><i class="fas fa-dog icon iconbleu"></i></span>
-                        <a href="#" id="animaux" class="liens_filtres">Animaux autorisés</a>
-                        </label>
+                    <!--Famille-->
+                        <a href="#" id="familial" class="liens_filtres">Familial
+                            <span class="span_icon_filtres"><i class="fas fa-child iconbleu"></i></span>
+                        </a>
+
+
+                    <!--Coeur-->
+                        <a href="#" id="romantique" class="liens_filtres">Romantique
+                            <span class="span_icon_filtres"><i class="fas fa-heart iconbleu"></i></span>
+                        </a>
+
+
+                    <!--Chien-->
+                        <a href="#" id="animaux" class="liens_filtres">Animaux autorisés
+                            <span class="span_icon_filtres"><i class="fas fa-dog iconbleu"></i></span>
+                        </a>
+
                     </div>
-                </div>
+                </section>
+
 
 
 
                 <!--logo "i"-->
-                <div id="info">
-                    <i class="fas fa-info icon_i"></i>
-                    <p>Plus de 500 logements sont disponibles dans cette ville</p> 
-                </div>
+                <span class="information">
+                    <i class="fas fa-info icon_i"></i> <p>Plus de 500 logements sont disponibles dans cette ville</p> 
+                </span>
             </section>
 
 
