modif toute section 2. figure->ahref, unité vw

--- a/reservia.html
+++ b/reservia.html
@@ -110,6 +110,7 @@
             <!-- SECTION 2 - Hébergement-->
             <section id="section_hebergement" class="section">
             
+                
                 <!-- Aside -->
                 <aside id="pop">
                     <div id="pop_h2"><h2>Les plus populaires</h2> <br /><br />
@@ -169,44 +170,16 @@
 
                 <!--Article-->
                 <article id="hebergement"> 
-                    <h2>Hébergements à Marseille</h2><br /><br /><!--CHOIX HEBERGEMENTS MARSEILLE--> 
+                    <h2 class="titre_article">Hébergements à Marseille</h2><br /><br /><!--CHOIX HEBERGEMENTS MARSEILLE--> 
 
-                    <div id="div_article_figures">
-                        <figure id="auberge_la_cannebiere" class="class_article_figure">
-                            <img src="images/hebergements/4_small/Auberge la Cannebière.jpg"
-                                alt="Auberge La Cannebière"
-                                class="img_article">
-                            <figcaption>Auberge La Cannebière  <br />Nuit à partir de 25€<br /> <!--Etoiles-->
-                                <div id="etoiles_art">
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_grise"></i>
-                                </div>    
-                            </figcaption>
-                        </figure>
+                    <div id="div_article">
 
-                        <figure id="hotel_du_port" class="class_article_figure">
-                            <img src="images/hebergements/4_small/Hôtel du port.jpg"
-                                alt="Hôtel du port"
-                                class="img_article">
-                            <figcaption>Hôtel du port  <br />Nuit à partir de 52€<br /> <!--Etoiles-->
-                                <div id="etoiles_art">
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                </div>
-                            </figcaption>
-                        </figure>
-
-                        <figure id="hotel_les_mouettes" class="class_article_figure">
-                            <img src="images/hebergements/4_small/Hôtel Les mouettes.jpg"
-                                alt="Hôtel Les mouettes"
-                                class="img_article">
-                            <figcaption>Hôtel Les mouettes  <br />Nuit à partir de 76€<br /> <!--Etoiles-->
+                        <div id="auberge_la_cannebiere" class="article_cards">
+                            <a class="article_a" href="#">
+                                <img src="images/hebergements/4_small/Auberge la Cannebière.jpg"
+                                    alt="Auberge La Cannebière"
+                                    class="img_article">
+                                <p>Auberge La Cannebière  <br />Nuit à partir de 25€</p> <!--Etoiles-->
                                 <div id="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -214,44 +187,15 @@
                                     <i class="fas fa-star etoile etoile_bleue"></i>
                                     <i class="fas fa-star etoile etoile_grise"></i>
                                 </div>
-                            </figcaption>
-                        </figure>
+                            </a>
+                        </div>
 
-                        <figure id="hotel_de_la_mer" class="class_article_figure">
-                            <img src="images/hebergements/4_small/Hôtel de la mer.jpg"
-                                alt="Hôtel de la mer"
-                                class="img_article">
-                            <figcaption>Hôtel de la mer  <br />Nuit à partir de 46€<br /> <!--Etoiles-->
-                                <div id="etoiles_art">
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_grise"></i>
-                                    <i class="fas fa-star etoile etoile_grise"></i>
-                                </div>
-                            </figcaption>
-                        </figure>
-
-                        <figure id="auberge_le_panier" class="class_article_figure">
-                            <img src="images/hebergements/4_small/Auberge Le Panier.jpg"
-                                alt="Auberge Le Panier"
-                                class="img_article">
-                            <figcaption>Auberge Le Panier <br />Nuit à partir de 23€<br /> <!--Etoiles-->
-                                <div id="etoiles_art">
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_bleue"></i>
-                                    <i class="fas fa-star etoile etoile_grise"></i>
-                                </div>
-                            </figcaption>
-                        </figure>
-
-                        <figure id="hotel_chez_amina" class="class_article_figure">
-                            <img src="images/hebergements/4_small/Hôtel chez Amina.jpg"
-                                alt="Hôtel chez Amina"
-                                class="img_article">
-                            <figcaption>Hôtel chez Amina <br />Nuit à partir de 96€<br /> <!--Etoiles-->
+                        <div id="hotel_du_port" class="article_cards">
+                            <a class="article_a" href="#">
+                                <img src="images/hebergements/4_small/Hôtel du port.jpg"
+                                    alt="Hôtel du port"
+                                    class="img_article">
+                                <p>Hôtel du port  <br />Nuit à partir de 52€</p> <!--Etoiles-->
                                 <div id="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -259,10 +203,76 @@
                                     <i class="fas fa-star etoile etoile_bleue"></i>
                                     <i class="fas fa-star etoile etoile_bleue"></i>
                                 </div>
-                            </figcaption>
-                        </figure>
+                            </a>
+                        </div>
+
+                        <div id="hotel_les_mouettes" class="article_cards">
+                            <a class="article_a" href="#">
+                                <img src="images/hebergements/4_small/Hôtel Les mouettes.jpg"
+                                    alt="Hôtel Les mouettes"
+                                    class="img_article">
+                                <p>Hôtel Les mouettes  <br />Nuit à partir de 76€</p> <!--Etoiles-->
+                                <div id="etoiles_art">
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_grise"></i>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div id="hotel_de_la_mer" class="article_cards">
+                            <a class="article_a" href="#">
+                                <img src="images/hebergements/4_small/Hôtel de la mer.jpg"
+                                    alt="Hôtel de la mer"
+                                    class="img_article">
+                                <p>Hôtel de la mer  <br />Nuit à partir de 46€</p> <!--Etoiles-->
+                                <div id="etoiles_art">
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_grise"></i>
+                                    <i class="fas fa-star etoile etoile_grise"></i>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div id="auberge_le_panier" class="article_cards">
+                            <a class="article_a" href="#">
+                                <img src="images/hebergements/4_small/Auberge Le Panier.jpg"
+                                    alt="Auberge Le Panier"
+                                    class="img_article">
+                                <p>Auberge Le Panier <br />Nuit à partir de 23€</p> <!--Etoiles-->
+                                <div id="etoiles_art">
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_grise"></i>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div id="hotel_chez_amina" class="article_cards">
+                            <a class="article_a" href="#">
+                                <img src="images/hebergements/4_small/Hôtel chez Amina.jpg"
+                                    alt="Hôtel chez Amina"
+                                    class="img_article">
+                                <p>Hôtel chez Amina <br />Nuit à partir de 96€</p> <!--Etoiles-->
+                                <div id="etoiles_art">
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <i class="fas fa-star etoile etoile_bleue"></i>
+                                </div>
+                            </a>
+                        </div>
                     </div>
+
                     <p><a id="afficher_plus" href="#">Afficher plus</a></p>
+
                 </article>
             </section>
 
